--- a/style.css
+++ b/style.css
@@ -1,33 +1,24 @@
-body {
-  background-color: #DC143C;
-  color: #FFF;
-}
-
-h1 {
-  color: #8B0000;
-}
-
-p {
-  color: #A52A2A;
-}
-
-a {
-  color: #B22222;
-}
-
-button {
-  background-color: #8B0000;
-  color: #FFF;
-  border: none;
-  padding: 15px 32px;
+/* Estilo para o cabeçalho do poema */
+.poema-cabecalho {
+  font-size: 2em;
+  font-weight: bold;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+  color: #333;
+  margin-bottom: 20px;
 }
 
-button:hover {
-  background-color: #A52A2A;
+/* Estilo para o corpo do poema */
+.poema-corpo {
+  font-size: 1.2em;
+  line-height: 1.6;
+  color: #666;
+  text-align: justify;
+  margin-bottom: 30px;
+}
+
+/* Estilo para o elemento de áudio */
+.poema-audio {
+  width: 100%;
+  display: block;
+  margin-top: 30px;
 }
