--- a/style.css
+++ b/style.css
@@ -22,3 +22,35 @@
   display: block;
   margin-top: 30px;
 }
+
+/* Estilo para o cabeçalho do poema */
+.poema-cabecalho {
+  font-size: 2.5em;
+  font-weight: bold;
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+  text-shadow: 2px 2px 4px #999;
+}
+
+/* Estilo para o corpo do poema */
+.poema-corpo {
+  font-size: 1.2em;
+  line-height: 1.6;
+  color: #666;
+  text-align: justify;
+  margin-bottom: 30px;
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+
+/* Estilo para o elemento de áudio */
+.poema-audio {
+  width: 100%;
+  display: block;
+  margin-top: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
